# TechMatch

./: .gitignore  pyproject.toml  requirements.txt
app/: app.py  database.py  vagas.js
app/models/: usuario.py  vaga.py  vagas.py
app/route/: login.py  usuario.py  vagas.py
app/schema/: usuario.py  vagas.py
app/static/css/: dashboard.css  login.css  registro.css  vagas.css
app/static/js/: dashboard.js  login.js  registro.js  vagas.js
app/templates/: dashboard_emp.html  login.html  registro.html  vagas.html
